add discussion markdown in step 1

--- a/Data_processing.ipynb
+++ b/Data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 1,
    "id": "7ef93ec5-a990-41df-9f57-988e0048c881",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "id": "9acccdb2-154d-4fba-ae8a-b0e3d8906b53",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 5,
    "id": "11db9e79-8a64-4f1f-9252-988d835903aa",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 6,
    "id": "fc400b40-ae27-4c40-acfe-0dfcb8383c5b",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Nathan Decurnex\\AppData\\Local\\Temp\\ipykernel_12004\\2605603465.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/y4/w5_0739x2g1_dm166snnvf740000gn/T/ipykernel_49028/2605603465.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 7,
    "id": "29ea70a4-c0df-4464-a4e1-1f73f7bb7342",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 8,
    "id": "08ad2df5-3249-443f-9959-9467a748a075",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 9,
    "id": "877adb63-dce7-4b96-bab1-a4217ac90eb5",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
        "2                       /m/0jys3g            /m/0bgchn_        /m/01vw26l  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 10,
    "id": "3eb83cf0-871d-4d5e-beb4-dbdf76586198",
    "metadata": {},
    "outputs": [],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 11,
    "id": "0c846269-a374-4454-8c5b-ce71b23ee873",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 12,
    "id": "39f0f336-07e5-4027-9499-9b34271e437b",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 13,
    "id": "bd26e334-5c07-48e7-8412-d9ac3038a64c",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 14,
    "id": "0bd5280f-ca55-4af7-8140-ce6cd0356fbb",
    "metadata": {},
    "outputs": [],
@@ -483,6 +483,98 @@
     "    'mean_box_office_revenue': x['Box_office_revenue'].mean(),\n",
     "    'num_movies': len(x),\n",
     "}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "77ff0fc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_runtime</th>\n",
+       "      <th>mean_box_office_revenue</th>\n",
+       "      <th>num_movies</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Release_date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1914</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>2.447000e+05</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1915</th>\n",
+       "      <td>190.0</td>\n",
+       "      <td>5.000000e+07</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1920</th>\n",
+       "      <td>147.0</td>\n",
+       "      <td>4.500000e+06</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1921</th>\n",
+       "      <td>102.0</td>\n",
+       "      <td>2.633333e+06</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1923</th>\n",
+       "      <td>84.5</td>\n",
+       "      <td>3.834395e+06</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              mean_runtime  mean_box_office_revenue  num_movies\n",
+       "Release_date                                                   \n",
+       "1914                  74.0             2.447000e+05         1.0\n",
+       "1915                 190.0             5.000000e+07         1.0\n",
+       "1920                 147.0             4.500000e+06         1.0\n",
+       "1921                 102.0             2.633333e+06         3.0\n",
+       "1923                  84.5             3.834395e+06         2.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_datetime.head()"
    ]
   },
   {
@@ -519,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 18,
    "id": "352b1870-510c-4070-bdbd-6f9745561678",
    "metadata": {},
    "outputs": [
@@ -527,12 +619,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we have 0  periode time that contains 0 films\n"
+      "Movie year of release span from 1914 to 2012.\n",
+      "Our dataset have 0  year(s) where no films where released.\n"
      ]
     }
    ],
    "source": [
-    "print('we have', (movies_datetime.num_movies==0).sum(), ' periode time that contains 0 films')"
+    "print(f'Movie year of release span from {movies_datetime.index.min()} to {movies_datetime.index.max()}.')\n",
+    "print('Our dataset have', (movies_datetime.num_movies==0).sum(), ' year(s) where no films where released.')"
    ]
   },
   {
@@ -540,7 +634,7 @@
    "id": "dc082e6c-aa79-46da-9144-9286add1e252",
    "metadata": {},
    "source": [
-    "we can see that there is no time without movies so, it is possible to look at time. Moreover, we can think to have some correlation between the number of movies and the box office revenue. However, with this first plot, we cannot conclude something."
+    "Since there is not any year without a movie release, any distribution of a movie characteristic will be continuous over time and will thus be possible to analyze. Moreover, we can think to have some correlation between the number of movies and the box office revenue. However, with this first plot, we cannot conclude something."
    ]
   },
   {
@@ -601,7 +695,7 @@
    "id": "fea60fd7-5d97-46e1-9abf-85800a8eb07b",
    "metadata": {},
    "source": [
-    "Here, we can see that the runtime fluctuated during the first 50th years but then the runtime is around 100min with less fluctuation with time"
+    "Here, we can see that the runtime fluctuated during the first 50th years but then the runtime is around 100min with less fluctuation with time. However this a good example of the attention we will have to pay to the 'weights' through the years. Indeed during first 50th years there are a lot of fluctuations of the mean runtime but the fact that these years contains only a few movies make it difficult to estimate a global tendency. Maybe these years should be grouped. In comparison, the fluctuation is less important during the last 50 years but the samples size by year are larger, thus it follows by law of large numbers that the means will be closer to the expected value (the reasoning is valable if we assume that the expected mean runtime is the same for each year)."
    ]
   },
   {
@@ -2034,7 +2128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
